laborations/lab1/testsuite/good/synthetic012.cc
int main() {
	double x = 5.00e10;
	return 0;
}
