laborations/lab1/testsuite/bad/bad034.cc
int foo() {
	for (int i = 0; i < 5) { }
	return x;
}
